active cases fix

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,9 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
+.regionSelector {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
